--- a/PRN212HotelManagement/PRN212HotelManagement/appsettings.json
+++ b/PRN212HotelManagement/PRN212HotelManagement/appsettings.json
@@ -2,5 +2,7 @@
   "ConnectionStrings": {
     "DBDefault": "Data Source=HANMAI\\HAN_MAI;Initial Catalog=PRN212HotelManagement;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
     //"DBDefault": "Data Source=MSI1509\\SQLEXPRESS;;Initial Catalog=PRN212HotelManagement;User ID=sa;Password=12345;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //"DBDefault": "Data Source=DUCKYRICHEST\\MSSQLSERVER1;Initial Catalog=PRN212HotelManagement;User ID=sa;Password=12345;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+
   }
 }
